# Vendly

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  cspell.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Vendly/: package.json
Vendly/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml
apps/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: setupTests.ts
apps/frontend/src/__mocks__/: axum.ts  tauri.ts
core/: Cargo.toml
core/src/tests/user/domain/vo/: test_auth_type.rs  test_email.rs  test_role_name.rs
core/src/user/domain/entities/: user.rs
core/src/user/domain/vo/: auth_type.rs  locale.rs  timezone.rs  validation_error.rs
infrastructure/schema/: MySQL.sql  SQLite.sql
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  db.rs  main.rs
tests/core/: core_e2e_test.rs
