[package]
name = "Vendly"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vendly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = [] }
tauri-plugin-opener = "2.5.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

# SeaORM con S1.0.143 MySQL/MariaDB
sea-orm = { version = "1.1.14", features = [
  "macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql"
] }


# Para leer y escribir configuración
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
config = "0.15.14"

anyhow = "1.0.99"
